# engine

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/glad/: glad.c
lib/include/glad/: glad.h
src/: neoskye.cpp  neoskye.hpp
src/gfx/: GraphicsSubsystem.cpp  GraphicsSubsystem.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  WindowSubsystem.cpp  WindowSubsystem.hpp
src/util/: std.hpp  types.hpp
